# boost-util-examples

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
1-base-from-member/: CMakeLists.txt  FdStreambuf.cpp  FdStreambuf.h  main.cpp
2-call-traits/: CMakeLists.txt  main.cpp
3-compressed-pair/: CMakeLists.txt  main.cpp
4-in-place-factory/: CMakeLists.txt  main.cpp
5-operators/: CMakeLists.txt  main.cpp
cmake/: FindBoostUtility.cmake
